--- a/notification-mobile.html
+++ b/notification-mobile.html
@@ -39,6 +39,6 @@
       <a href="/ordertracking-mobile.html" ><i class="fa fa-truck"></i></a> 
     </div>
     <script src="/static/data.js"></script>
-      <script> window.onload = () => { filterProduct("15k"); };</script>
+      <script> window.onload = () => { filterProduct("199"); };</script>
   </body>
 </html>
