--- a/cart-mobile.html
+++ b/cart-mobile.html
@@ -24,7 +24,11 @@
     </div> 
     <div class="navgap"></div>
     <img src="/static/image/cart-mobile-01.png"  width="100%">
-    <div class="cart-buttons"><button class="cart-button">Proceed to Checkout</button></div>
+    <div class="cart-buttons">
+      <button>
+        <i class="fa fa-lock" aria-hidden="true">
+         </i> Proceed to Checkout</button>
+    </div>
     <!--explore products--->
     <div>
       <main id="product-cards"></main>
