--- a/login-mobile.html
+++ b/login-mobile.html
@@ -25,7 +25,9 @@
     </div>
     <div class="navgap"></div>
     <div class="cart-buttons">
-      <button class="cart-button">Get Access to Orders and Favourites</button>
+      <button class="cart-button">
+        <i class="fa fa-sign-in" aria-hidden="true">
+         </i> Get Access to Orders and Favourites</button>
     </div>
     <form>
       <div class="login-container">
@@ -35,7 +37,9 @@
         <label for="psw"><b>OTP</b></label>
         <input type="password" placeholder="Enter OTP" name="psw" required>
         <label class="psw"><input type="checkbox" checked="checked">  Remember me</label>
-        <button type="submit">Login</button>
+        <button type="submit">
+          <i class="fa fa-user-circle" aria-hidden="true">
+          </i> Login</button>
       </div>
     </form>
     <!--explore products--->
