--- a/menu-mobile.html
+++ b/menu-mobile.html
@@ -23,7 +23,11 @@
       </div>
     </div> 
     <div class="navgap"></div>
-    <div class="cart-buttons"><button class="cart-button">More Options</button></div>
+    <div class="cart-buttons">
+      <button class="cart-button">
+        <i class="fa fa-plus-square" aria-hidden="true">
+        </i> More Options</button>
+    </div>
     <div class="menu-buttons">
       <button class="menu-button"><i class="fa fa-users"></i> SELL</button>
       <button class="menu-button"><i class="fa fa-question-circle"></i> ABOUT</button>
