--- a/login.html
+++ b/login.html
@@ -38,16 +38,23 @@
     
       <form>
         <div class="cart-buttons">
-          <button class="cart-button">Get Access to Orders and Favourites</button>
+          <button class="cart-button">
+            <i class="fa fa-sign-in" aria-hidden="true">
+             </i> Get Access to Orders and Favourites</button>
         </div>
         <div class="login-container">
           <label for="uname"><b>Phone Number</b></label>
           <input type="text" placeholder="Type Phone Number" name="uname" required>
-          <button type="submit" style="background-color:#c67400">Send OTP</button>
+          <button type="submit" style="background-color:#c67400">
+            <i class="fa fa-paper-plane" aria-hidden="true">
+  
+            </i> Send OTP</button>
           <label for="psw"><b>OTP</b></label>
           <input type="password" placeholder="Enter OTP" name="psw" required>
           <label class="psw"><input type="checkbox" checked="checked">  Remember me</label>
-          <button type="submit">Login</button>
+          <button type="submit">
+            <i class="fa fa-user-circle" aria-hidden="true">
+            </i> Login</button>
         </div>
       </form>
     
