--- a/search.html
+++ b/search.html
@@ -42,7 +42,9 @@
     </div>
     <div class="navgap">
       <img src="/static/image/index-13.avif"  width="100%">
-      <h2>Filters</h2>
+      <div class="cart-buttons">
+        <button class="cart-button"><i class="fa fa-filter"></i> Apply Search Filters</button>
+      </div>
       
         <div class="filter-buttons">
           <button class="filter-button" onclick="filterProduct('199')">199 STORE</button>
@@ -59,7 +61,9 @@
       </div>
     
        <hr class="dashed">
-       <h2>Search Results</h2>
+       <div class="cart-buttons">
+        <button class="cart-button"><i class="fa fa-search"></i> Search Results</button>
+      </div>
        <main id="product-cards"><!--render product---></main>
        <img src="/static/image/carousel-a-05.avif" width="100%">
        <img src="/static/image/carousel-a-07.avif" width="100%">
