--- a/login-mobile.html
+++ b/login-mobile.html
@@ -33,7 +33,10 @@
       <div class="login-container">
         <label for="uname"><b>Phone Number</b></label>
         <input type="text" placeholder="Type Phone Number" name="uname" required>
-        <button type="submit" style="background-color:#c67400">Send OTP</button>
+        <button type="submit" style="background-color:#c67400">
+          <i class="fa fa-paper-plane" aria-hidden="true">
+
+          </i> Send OTP</button>
         <label for="psw"><b>OTP</b></label>
         <input type="password" placeholder="Enter OTP" name="psw" required>
         <label class="psw"><input type="checkbox" checked="checked">  Remember me</label>
