--- a/menu-mobile.html
+++ b/menu-mobile.html
@@ -33,7 +33,7 @@
       <button class="menu-button"><i class="fa fa-question-circle"></i> ABOUT</button>
       <button class="menu-button"><i class="fa fa-phone"></i> CONTACT US</button>
       <button class="menu-button"><i class="fa fa-shopping-bag"></i> BUY AGAIN</button>
-      <button class="menu-button"><i class="fa fa-smile-o"></i> YOUR PROFILE</button>
+      <button class="menu-button"><i class="fa fa-smile-o"></i> PROFILE</button>
       <button class="menu-button"><i class="fa fa-cog"></i> SETTINGS</button>
     </div>
     <!--explore products--->
