--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <div class="topnav">
       <div class="mobile-nav">
-        <a class="active" href="/"><i class="fa fa-home"></i> DC-SHOP</a>
+        <a class="active" href="/"><i class="fa fa-home"></i> dcstore.info</a>
       </div>
       <div class="left-nav">
         <a href="/"><i class="fa fa-users"></i> SELL</a>
