--- a/index-mobile.html
+++ b/index-mobile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DC-SHOP</title>
+    <title>dcstore.info</title>
     <!--fevicon icon-->
     <link rel="icon" href="/static/image/index-01.png" />
     <link rel="stylesheet" href="/static/style-mobile.css" />
@@ -14,7 +14,7 @@
   <body>
     <div class="topnav">
       <div class="mobile-nav">
-        <a class="active" href="/index-mobile.html"> DC-SHOP</a>
+        <a class="active" href="/index-mobile.html"> dcstore.info</a>
       </div>
       <div class="search-container">
         <a href="/search-mobile.html"><i class="fa fa-search"></i></a>
