--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DC-SHOP</title>
+    <title>dcstore.info</title>
     <!--fevicon icon-->
     <link rel="icon" href="/static/image/index-01.png" />
     <link rel="stylesheet" href="/static/style.css" />
