--- a/carousel-b.html
+++ b/carousel-b.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DC-SHOP</title>
+    <title>dcstore.info</title>
     <!--fevicon icon-->
     <link rel="icon" href="f.png" />
     <link rel="stylesheet" href="index.css" />
