--- a/search-mobile.html
+++ b/search-mobile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DC-SHOP</title>
+    <title>dcstore.info</title>
     <link rel="icon" href="/static/image/index-01.png" />
     <link rel="stylesheet" href="/static/style-mobile.css" />
     
