--- a/search.html
+++ b/search.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DC-SHOP</title>
+    <title>dcstore.info</title>
     <link rel="icon" href="/static/image/index-01.png" />
     <link rel="stylesheet" href="/static/style.css" />
     
@@ -15,7 +15,7 @@
   <body>
     <div class="topnav">
       <div class="mobile-nav">
-        <a class="active" href="/"><i class="fa fa-home"></i> DC-SHOP</a>
+        <a class="active" href="/"><i class="fa fa-home"></i> dcstore.info</a>
       </div>
       <div class="left-nav">
         <a href="/"><i class="fa fa-users"></i> SELL</a>
